--- a/index.html
+++ b/index.html
@@ -6,25 +6,52 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Meu portifolio</title>
+  <title>Meu Portfólio</title>
 </head>
 <body>
+  <div>
+    <nav class="navBar">
+      <h1>Code by D</h1>
+    </nav>
+  </div>
   <h1 class="titulo">Gabriel Santos</h1>
-  <img class="imagemCentro" src="https://c.tenor.com/3ItiA2urMygAAAAC/nerowo-fsociety.gif">
+<!--  <img class="imagemCentro" src="https://c.tenor.com/3ItiA2urMygAAAAC/nerowo-fsociety.gif">-->
   <h2 class="subtitulo">Pentester Júnior com foco em Analise de Qualidade</h2>
   <div class="centerDIVS">
     <div class="statusSI">
-      <h2 class="statusSI">Sistema de informação</h2>
+      <h2 class="statusSI">| Sistema de informação |</h2>
     </div>
     <div class="statusCY">
-      <h2 class="statusCY">Cyber Security</h2>
+      <h2 class="statusCY">Cyber Security |</h2>
     </div>
     <div class="statusDEV">
-      <h2 class="statusDEV">Desenvolvedor júnior</h2>
+      <h2 class="statusDEV">Desenvolvedor júnior |</h2>
     </div>
     <div class="statusQA">
-      <h2 class="statusQA">Analista de Qualidade</h2>
+      <h2 class="statusQA">Analista de Qualidade |</h2>
     </div>
+  </div>
+  <div class="icones">
+    <div>
+      <a href="https://www.linkedin.com/in/gabriel-santos-9b1b3a1b0/" target="_blank">
+        <img class="icoLinkedin" src="https://cdn-icons-png.flaticon.com/512/174/174857.png"></a>
+    </div>
+
+    <div>
+        <a href="https://github.com/privgabriel" target="_blank">
+        <img class="icoGithub" src="https://icons-for-free.com/iconfiles/png/512/coding+development+github+programming+social+icon-1320086085448562008.png"></a>
+    </div>
+
+    <div>
+      <a href="https://cursos.alura.com.br/user/RealDrinkee" target="_blank">
+        <img class="icoAlura" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fblog.b2bstack.com.br%2Fwp-content%2Fuploads%2F2021%2F06%2Fchannels4_profile.jpeg&f=1&nofb=1&ipt=eab9152292687414e40cf6393a1784e1ee60599b2acbf4763451aaaa13bd28bc&ipo=images" >
+      </a>
+    </div>
+  </div>
+  <div class="infos">
+    <div class="info">
+      <img class="icoEmail" src="https://cdn.icon-icons.com/icons2/2407/PNG/512/tutanota_icon_146082.png" alt="_blank">
+      <a class="email" href="mailto:gabriel_santos@tutanota.com">gabriel_santos@tutanota.com</a>
   </div>
 
 </body>
