--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
   </div>
   <h1 class="titulo">Gabriel Santos</h1>
-<!--  <img class="imagemCentro" src="https://c.tenor.com/3ItiA2urMygAAAAC/nerowo-fsociety.gif">-->
+ <img class="imagemCentro" src="https://c.tenor.com/3ItiA2urMygAAAAC/nerowo-fsociety.gif">
   <h2 class="subtitulo">Pentester Júnior com foco em Analise de Qualidade</h2>
   <div class="centerDIVS">
     <div class="statusSI">
